# salex-rs

./: .gitignore  Cargo.toml  README.md
apps/salex-cli/: Cargo.toml
apps/salex-cli/src/: lib.rs  main.rs
apps/salex-so-xml/: Cargo.toml
apps/update-valens/: Cargo.toml
assets/data/: facit_underlag_2.xhtml  lemman.json
crates/html/: Cargo.toml
crates/salex-cli/: Cargo.toml
crates/salex-cli/src/: main.rs
crates/salex-so/: Cargo.toml
crates/salex-so-infrastructure/: Cargo.toml
crates/salex-so-infrastructure/src/infrastructure/repositories/: sql_so_ord.rs
crates/salex-so-infrastructure/tests/so_exporter/: exporting.rs  helpers.rs  main.rs
crates/salex-so-xml/: Cargo.toml
crates/salex-so-xml/src/: main.rs
crates/salex-so/src/application/exporter/: mod.rs  so_exporter.rs
crates/salex-so/src/application/queries/: mod.rs
crates/salex-so/src/application/repositories/: mod.rs
crates/salex-so/src/domain/entities/: mod.rs  so_ord.rs
crates/salex-so/tests.bak/so_exporter/: exporting.rs  helpers.rs
crates/salex/src/: lib.rs
crates/salex/src/application/queries/: superlemma.rs
crates/salex/src/domain/: mod.rs  services.rs
crates/salex/src/domain/entities/: base.rs  idiom.rs  lexem.rs  morfex.rs  saol_lemma.rs  sentens.rs  so_base.rs  so_lemma.rs  superlemma.rs  uttal.rs
crates/salex/tests/: py_verify.rs
crates/update-valens/: Cargo.toml
libs/html/src/: html.rs  lib.rs
libs/salex/: Cargo.toml
libs/salex-so/: Cargo.toml
libs/salex-so-infrastructure/: Cargo.toml
libs/salex-so-infrastructure/src/: configuration.rs  lib.rs
libs/salex-so-infrastructure/src/infrastructure/queries/: mod.rs  sql_bforms.rs
libs/salex-so-infrastructure/src/infrastructure/repositories/: mod.rs  sql_so_ord.rs
libs/salex-so/src/: lib.rs
libs/salex-so/src/application/: mod.rs
libs/salex-so/src/application/queries/: bforms.rs
libs/salex-so/src/application/repositories/: so_ord.rs
libs/salex-so/src/domain/: error.rs
libs/salex-so/src/domain/entities/: mod.rs  so_base.rs
libs/salex/src/: lib.rs
libs/salex/src/application/queries/: mem_superlemma.rs  mod.rs  superlemma.rs
libs/salex/src/domain/: mod.rs
libs/salex/src/domain/entities/: amnesomrade.rs  base.rs  etymologi.rs  hv.rs  idiom.rs  lemma.rs  lexem.rs  mod.rs  morfex.rs  saol_lemma.rs  sentens.rs  so_base.rs  so_lemma.rs  superlemma.rs  syntex.rs  valens.rs
libs/salex/tests/: py_verify.rs
src/: main.rs
