[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
# local crates
html = { path = "./crates/html" }
salex = { version = "0.1.5", path = "./crates/salex" }
salex-so = { version = "0.1.0", path = "./crates/salex-so" }
salex-so-infrastructure = { version = "0.1.0", path = "./crates/salex-so-infrastructure" }

# external crates
async-trait = "0.1.57"
chrono = "0.4.23"
clap = "4.0.10"
csv = "1.1.6"
dotenvy = "0.15.5"
env_logger = "0.9.1"
eyre = "0.6.8"
flate2 = "1.0.24"
itertools = "0.10.4"
log = "0.4.17"
once_cell = "1.14.0"
rstest = "0.15.0"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.6.2", default-features = false }
tokio = { version = "1.24.2", default-features = false }
tracing = "0.1.37"
tracing-bunyan-formatter = "0.3.3"
tracing-log = "0.2"
tracing-subscriber = "0.3.15"
