[package]
name = "salex-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["cargo"] }
csv = "1.1.6"
env_logger = "0.9.1"
flate2 = "1.0.24"
log = "0.4.17"
salex = { version = "0.1.0", path = "../../libs/salex" }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
