[package]
name = "salex-so-xml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.10"
dotenvy = "0.15.5"
salex-so-infrastructure = { version = "0.1.0", path = "../../libs/salex-so-infrastructure" }
tokio = { version = "1.21.1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
