[package]
name = "salex-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
clap = { workspace = true, features = ["cargo"] }
csv.workspace = true
env_logger.workspace = true
eyre.workspace = true
flate2.workspace = true
log.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# local deps
salex.workspace = true
