[package]
name = "salex-so-infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
# thiserror = "1.0.35"
itertools.workspace = true
once_cell.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio-rustls"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
tracing-bunyan-formatter.workspace = true
tracing-log.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# local deps
html.workspace = true
salex-so.workspace = true

[dev-dependencies]
rstest.workspace = true

[features]
default = ["mysql"]
sqlite = ["sqlx/sqlite"]
mysql = ["sqlx/mysql"]
