[package]
name = "salex-so-xml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
dotenvy.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# local deps
salex-so-infrastructure.workspace = true

[features]
default = ["mysql"]
sqlite = ["salex-so-infrastructure/sqlite"]
mysql = ["salex-so-infrastructure/mysql"]
