[package]
name = "salex-so"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
# thiserror = "1.0.35"
serde = { workspace = true, features = ["derive"] }
tracing.workspace = true

# local deps
html.workspace = true


[dev-dependencies]
itertools.workspace = true
once_cell.workspace = true
rstest.workspace = true
# tokio = { version = "1.21.1", default-features = false, features = [
#     "macros",
#     "rt-multi-thread",
# ] }
# tracing-log = "0.1.3"
# tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
