[package]
name = "salex-so-infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
# thiserror = "1.0.35"
tracing = "0.1.36"
html = { path = "../html" }
serde = { version = "1.0.144", features = ["derive"] }
sqlx = { version = "0.6.2", default-features = false, features = ["runtime-tokio-rustls"] }
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
tracing-log = "0.1.3"
tokio = { version = "1.21.1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
once_cell = "1.14.0"
itertools = "0.10.4"
salex-so = { version = "0.1.0", path = "../salex-so" }
tracing-bunyan-formatter = "0.3.3"
serde_json = "1.0.85"

[dev-dependencies]
rstest = "0.15.0"

[features]
sqlite = ["sqlx/sqlite"]
