[package]
name = "salex-so"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
# thiserror = "1.0.35"
tracing = "0.1.36"
html = { path = "../html" }
serde = { version = "1.0.144", features = ["derive"] }

[dev-dependencies]
itertools = "0.10.4"
once_cell = "1.14.0"
rstest = "0.15.0"
# tokio = { version = "1.21.1", default-features = false, features = [
#     "macros",
#     "rt-multi-thread",
# ] }
# tracing-log = "0.1.3"
# tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
