[package]
name = "salex"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
karp-lex = { git = "https://github.com/spraakbanken/karp-backend-rs.git" }
log = "0.4.17"
serde_json = "1.0.85"
async-trait = "0.1.57"
diacritics = "0.1.3"
